add tweet styling and images

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,44 @@
         </form>
       </section>
 
+      <section>
+        <article class="tweet grey-border">
+          <header>
+          <img src="http://placekitten.com/100/100" class="avatar">
+          <span class="user-full-name">Bill Fields</span>
+          <span class="user-handle">@MrFields</span>
+          </header>
+          <p>Little tweet here</p>
+          <footer class="footer grey-border-top">
+            <p>10 days ago</p>
+            <span class="footer-images">
+              <!-- from https://feathericons.com/ -->
+              <img class="logo" src="/images/flag.svg">
+              <img class="logo" src="/images/repeat.svg">
+              <img class="logo" src="/images/heart.svg">
+            </span>
+          </footer>
+        </article>
+
+        <article class="tweet grey-border">
+          <header>
+          <img src="http://placekitten.com/100/100" class="avatar">
+          <span class="user-full-name">Bill Fields</span>
+          <span class="user-handle">@MrFields</span>
+          </header>
+          <p>I'm writing a longer tweet that spans multiple lines just because. I have a dog and his name is dog.</p>
+          <footer class="footer grey-border-top">
+            <p>10 days ago</p>
+            <span class="footer-images">
+              <!-- from https://feathericons.com/ -->
+              <img class="logo" src="/images/flag.svg">
+              <img class="logo" src="/images/repeat.svg">
+              <img class="logo" src="/images/heart.svg">
+            </span>
+          </footer>
+        </article>
+      </section>
+
     </main>
 
   </body>
