adds functionality to fetch tweets with ajax

--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,9 @@
 
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form action="/tweets" method="POST">
-          <textarea name="text" placeholder="What are you humming about?"></textarea>
-          <input id="tweet-button" type="submit" value="Tweet">
+        <form id="submit-tweet" action="/tweets" method="POST">
+          <textarea name="text" placeholder="What are you humming about?" required></textarea>
+          <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
       </section>
