--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,8 @@
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form id="submit-tweet" action="/tweets" method="POST">
-          <textarea name="text" placeholder="What are you humming about?" required></textarea>
+          <span id="tweet-response-window"></span>
+          <textarea name="text" id="tweet-text" placeholder="What are you humming about?" required></textarea>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
