--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <a href="#" class="compose-button">Compose</a>
     </nav>
 
     <!-- Page-specific (main) content here -->
