Fixes bug in character counter and tweet validation

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form id="submit-tweet" action="/tweets" method="POST">
+          <span id="tweet-response-window"></span>
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?" required></textarea>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
